--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,12 @@
   "version": "1.0.0",
   "description": "FDT - Fraud Detection in UPI Transactions PWA",
   "private": true,
-  "proxy": "http://localhost:8001",
   "dependencies": {
+    "axios": "^1.7.9",
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "axios": "^1.7.9",
-    "firebase": "^11.1.0",
     "react-scripts": "5.0.1"
   },
   "scripts": {
@@ -34,5 +33,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.24",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.18"
   }
 }
