--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,10 +6,12 @@
   "dependencies": {
     "axios": "^1.7.9",
     "firebase": "^11.1.0",
+    "gsap": "^3.14.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "three": "^0.182.0"
   },
   "scripts": {
     "start": "react-scripts start",
