Fix chatbot to return real data instead of default messages
- Added transaction ID lookup in fallback mode
- Added 'analyse last N transactions' handler
- Added 'show blocked transactions' handler
- Added 'fraud rate' query handler
- Fixed console logging in dashboard.js for debugging
- Added cache-busting version strings to CSS/JS
- Created chatbot test page for verification
- Chatbot now returns actual database data for all queries

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-GROQ_API_KEY=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
+# Get a FREE Groq API Key: https://console.groq.com/keys
+# Leave empty for fallback mode (rule-based, works with your database!)
+GROQ_API_KEY=
+
 DB_URL=postgresql://fdt:fdtpass@127.0.0.1:5433/fdt_db
