--- a/requirements.txt
+++ b/requirements.txt
@@ -21,3 +21,10 @@ starlette==0.50.0
 uvicorn==0.40.0
 webauthn==2.2.0
 xgboost==3.1.3
+
+# Additional dependencies
+groq==0.18.0
+requests==2.32.0
+aiohttp==3.11.0
+matplotlib==3.10.0
+seaborn==0.13.2
